# bf

./: .gitattributes  .gitignore  404.html  README.md  gittxt.txt  index.html  index.txt  ipfs-vpn-fix.sh  next.config.ts  nft_calculation  package-lock.json  package.json  ssh_config.txt  test_merkle.js
r/: Cargo.toml  buffer-keypair.json  m.sh  package-lock.json  package.json  tsconfig.json
r/src/: lib.BackUprs  lib.BackUprs2  lib.rs  lib.rs.smol
r/src/instructions/: instruction_14.rs  instruction_15.rs  instruction_17.rs  instruction_24.rs  instruction_25.rs  instruction_26.rs  instruction_27.rs  instruction_29.rs  instruction_30.rs  instruction_31.rs  instruction_32.rs  instruction_33.rs  instruction_34.rs  instruction_36.rs  instruction_37.rs  instruction_38.rs  instruction_38.rs.bak  mod.rs  (+8 more)
r/tests/: instruction_14_test.ts  instruction_15_test.ts  instruction_17_test.ts  instruction_23_test.ts  instruction_24_test.ts.bak  instruction_25_test.ts  instruction_25_test.ts.bak  instruction_26_test.ts  instruction_26_test.ts.bak  instruction_27_test.ts.bak  instruction_29_test.ts.bak  instruction_30_test.ts  instruction_31_test.ts  instruction_31_test.ts.bak  instruction_32_test.ts  instruction_32_test.ts.bak  instruction_33_test.ts  instruction_34_test.ts  instruction_35_test.ts  instruction_36_test.ts  instruction_37_test.ts  instruction_38_test.ts  instruction_39_test.ts  instruction_40_test.ts  instruction_41_test.ts  instruction_42_test.ts  instruction_43_test.ts  instruction_45_test.ts  instruction_46_test.ts  instruction_test_24.ts  instruction_test_24.tsBackUp
(+512 files in other folders)
