[package]
name = "r"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.2.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = "5.1.0"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
sha2 = "0.10.8"
[lib]
crate-type = ["cdylib", "lib"]
